--- a/ProjectDi/ProjectDi.csproj
+++ b/ProjectDi/ProjectDi.csproj
@@ -44,7 +44,7 @@
     </ItemGroup>
     <ItemGroup>
         <Content Include=".gitignore"/>
-        <Content Include="LICENSE.md"/>
+        <Content Include="README.md"/>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
